# django-multidb-router

./: README.rst  pyproject.toml  run.sh  tox.ini
.github/workflows/: ci.yml
src/: test_settings.py
src/multidb/: __init__.py  middleware.py  pinning.py  tests.py
