[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-multidb-router"
version = "0.11.0"
description = "Round-robin multidb router for Django."
readme = "README.rst"
license = {text = "BSD"}
authors = [
    {name = "Jeff Balogh", email = "jbalogh@mozilla.com"},
]
maintainers = [
    {name = "Jeff Balogh", email = "jbalogh@mozilla.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Environment :: Web Environment :: Mozilla",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/jbalogh/django-multidb-router"
Repository = "https://github.com/jbalogh/django-multidb-router"
Issues = "https://github.com/jbalogh/django-multidb-router/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "Django>=4.2",
]
test = [
    "Django>=4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/multidb"]

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"src/multidb/tests.py" = [
    "F401",  # Allow unused imports in tests
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"